corrected scrolling on new horizontal scroll buttons

--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
-* {
-  /* border: 1px solid red; */
-}
+/* * {
+  border: 1px solid red;
+} */
+
+
 
 body {
-  display: flex;
+  display: grid;
+  grid-template-rows: 1fr 2fr 1fr;
+  grid-template-areas: 
+  header
+  main
+  footer;
   z-index: -1;
-
   flex-direction: column;
 }
 header {
@@ -39,6 +45,8 @@ header {
   justify-content: center;
   align-items: center;
   background: black;
+  opacity: .5;
+
   color: white;
   width: 10vw;
   height: 10vw;
@@ -46,11 +54,12 @@ header {
   border-radius: 100%;
 }
 .button-holder {
+  align-self: center;
   display: flex;
   width: 100vw;
   z-index: 1;
-  justify-content: center;
-  align-items: center;
+  position: absolute;
+  justify-content: space-between;
 }
 
 /* Modal Section */
